--- a/examples/systolic_cifar10.ipynb
+++ b/examples/systolic_cifar10.ipynb
@@ -378,7 +378,7 @@
     "                                   sa_rows=r, sa_cols=c, verbose=False)\n",
     "    \n",
     "    model = resnet50_systolic(pretrained=True, axx_mult=axx_mult, use_exact=USE_EXACT,sa_rows=r, sa_cols=c)\n",
-    "    model.eval()  # wie gewünscht\n",
+    "    model.eval() \n",
     "\n",
     "    # Calibrate quickly (reuse same approach for fair comparison)\n",
     "    with torch.no_grad():\n",
